--- a/uspace/drv/nic/smc95xx/meson.build
+++ b/uspace/drv/nic/smc95xx/meson.build
@@ -26,7 +26,7 @@
 # THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #
 
-deps = [ 'nic' ]
+deps = [ 'usbdev', 'usb', 'nic', 'crypto' ]
 src = files(
 	'driver.c',
 )
