Replace driver name from smc95xx to smsc95xx

--- a/uspace/drv/meson.build
+++ b/uspace/drv/meson.build
@@ -75,7 +75,7 @@ drvs = [
 	'nic/rtl8169',
 	'nic/ar9271',
 	'nic/virtio-net',
-	'nic/smc95xx',
+	'nic/smsc95xx',
 	'platform/amdm37x',
 	'platform/arm64virt',
 	'platform/icp',
