Add smsc95xx driver to rd_essential list for raspberry pi machine

--- a/meson/arch/arm32/meson.build
+++ b/meson/arch/arm32/meson.build
@@ -85,4 +85,10 @@ elif MACHINE == 'integratorcp'
 		'drv/intctl/icp-ic',
 		'drv/platform/icp',
 	]
+
+elif MACHINE == 'raspberrypi'
+	rd_essential += [
+		'drv/nic/smsc95xx',
+	]
+
 endif
